carrito desc text align correction

--- a/src/components/Carrito/Carrito.scss
+++ b/src/components/Carrito/Carrito.scss
@@ -9,9 +9,10 @@
         padding: 20px;
         display: grid;
         grid-template-columns: 1fr auto;
-        align-items: center;
         color: white;
+        align-items: center;
         justify-items: center;
+        text-align: center;
 
         .nombre {
             font-weight: bold;
